# kakachi

./: .gitignore  Cargo.toml  README.md  env.example
.github/agents/: kakachi-rust-vpn.agent.md  kakachi-security-review.agent.md
.github/instructions/: kakachi-rust-quality.instructions.md
.github/prompts/: kakachi-phase-execution.prompt.md
core/agent/: Cargo.toml
core/agent/src/: lib.rs
core/chat/: Cargo.toml
core/chat/src/: lib.rs
core/net/: Cargo.toml
core/net/src/: lib.rs
core/wg/: Cargo.toml
core/wg/src/: lib.rs
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/lib/: tauri.ts
docs/: versioning-control-plan.md
server/api/: Cargo.toml
server/api/src/: main.rs
server/coordination/: Cargo.toml
server/coordination/src/: lib.rs
