[package]
name = "kakachi-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
kakachi-chat = { path = "../chat" }
kakachi-net = { path = "../net" }
kakachi-wg = { path = "../wg" }

[lints]
workspace = true
