[package]
name = "kakachi-wg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
ipnet.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[lints]
workspace = true
