[package]
name = "kakachi-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Kakachi Contributors"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
chrono = { version = "0.4.41", features = ["clock", "serde"] }
dotenvy = "0.15.7"
kakachi-agent = { path = "../../core/agent" }
kakachi-net = { path = "../../core/net" }
kakachi-wg = { path = "../../core/wg" }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.0.6", features = [] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[workspace]
