[package]
name = "kakachi-coordination"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
rand.workspace = true
regex.workspace = true
rusqlite.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
